test_suite/ERROR_unknown_id.java
class Main {
    public static void main(String[] a) {
    }
}

class A {
    public int test() {
        return a;
    }
}
